--- a/app/src/main/res/xml/file_paths.xml
+++ b/app/src/main/res/xml/file_paths.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <paths xmlns:android="http://schemas.android.com/apk/res/android">
+    <external-path name="external_files" path="."/>
     <external-path name="my_images" path="Android/data/br.com.rm.cfv/files/Pictures"/>
-    <external-cache-path name="my_files_temp" path="Android/data/br.com.rm.cfv/files/cache/Pictures" />
+    <external-path name="my_docs" path="Android/data/br.com.rm.cfv/files/Documents"/>
+    <external-cache-path name="my_files_temp" path="Android/data/br.com.rm.cfv/files/cache/Documents" />
 </paths>
