--- a/app/src/main/res/drawable/check_default.xml
+++ b/app/src/main/res/drawable/check_default.xml
@@ -1,8 +1,8 @@
-<!-- drawable/delete.xml -->
+<!-- drawable/check.xml -->
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:height="24dp"
     android:width="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
-    <path android:fillColor="#fff" android:pathData="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z" />
+    <path android:fillColor="@color/icons" android:pathData="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z" />
 </vector>
