--- a/app/src/main/res/drawable/delete_default.xml
+++ b/app/src/main/res/drawable/delete_default.xml
@@ -1,8 +1,8 @@
-<!-- drawable/view_list.xml -->
+<!-- drawable/delete.xml -->
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:height="24dp"
     android:width="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
-    <path android:fillColor="#fff" android:pathData="M9,5V9H21V5M9,19H21V15H9M9,14H21V10H9M4,9H8V5H4M4,19H8V15H4M4,14H8V10H4V14Z" />
+    <path android:fillColor="@color/icons" android:pathData="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z" />
 </vector>
