--- a/app/src/main/res/drawable/shape_circle_gray.xml
+++ b/app/src/main/res/drawable/shape_circle_gray.xml
@@ -4,7 +4,7 @@
         android:shape="oval">
 
     <solid
-            android:color="@color/secondaryColor"/>
+            android:color="@color/cinza_padrao_android"/>
 
     <size
             android:width="120dp"
