--- a/app/src/main/res/drawable/view_list_default.xml
+++ b/app/src/main/res/drawable/view_list_default.xml
@@ -1,8 +1,8 @@
-<!-- drawable/check.xml -->
+<!-- drawable/view_list.xml -->
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:height="24dp"
     android:width="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
-    <path android:fillColor="#fff" android:pathData="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z" />
+    <path android:fillColor="@color/icons" android:pathData="M9,5V9H21V5M9,19H21V15H9M9,14H21V10H9M4,9H8V5H4M4,19H8V15H4M4,14H8V10H4V14Z" />
 </vector>
