--- a/app/src/main/res/layout/activity_charts.xml
+++ b/app/src/main/res/layout/activity_charts.xml
@@ -65,6 +65,7 @@
                         android:layout_width="220dp"
                         android:layout_height="wrap_content"
                         android:text="@string/chart_total_a_receber_no_mes"
+                        android:visibility="gone"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         android:textSize="20sp" />
@@ -75,6 +76,7 @@
                         android:layout_height="wrap_content"
                         android:gravity="start"
                         android:padding="8dp"
+                        android:visibility="gone"
                         android:text="R$ 0,00"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/textViewTotalReceberLabel"
