--- a/app/src/main/res/layout/list_view_item_default.xml
+++ b/app/src/main/res/layout/list_view_item_default.xml
@@ -1,23 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="1dp"
-        app:cardElevation="2dp"
-        android:layout_margin="4dp"
-        app:contentPadding="6dp"
-        app:cardUseCompatPadding="true">
+        android:foreground="?android:attr/selectableItemBackground"
+        android:orientation="vertical"
+        android:paddingTop="24dp">
 
-    <TextView
-            android:id="@+id/textView"
+    <TextView android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="10dp"
+            android:layout_marginStart="72dp"
             android:text="Item Value"
-            android:textAlignment="textStart"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:textSize="18sp"
             android:textAllCaps="true"
-            android:textColor="@android:color/black"
-            android:textSize="14sp" />
+            android:textColor="@android:color/black"/>
 
-</androidx.cardview.widget.CardView>
+    <View android:id="@+id/divider"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginStart="72dp"
+            android:background="@color/divider"/>
+
+</LinearLayout>
