--- a/app/src/main/res/layout/recycler_view_item_default_1.xml
+++ b/app/src/main/res/layout/recycler_view_item_default_1.xml
@@ -1,24 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
+<LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="3dp"
-        app:cardElevation="2dp"
-        android:layout_margin="4dp"
-        app:cardUseCompatPadding="true">
+        android:foreground="?android:attr/selectableItemBackground"
+        android:orientation="vertical"
+        android:paddingTop="24dp">
 
     <TextView android:id="@+id/textView1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:foreground="?android:attr/selectableItemBackground"
+            android:layout_marginStart="72dp"
             android:text="Nome"
-            android:padding="16dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             android:textSize="18sp"
             android:textAllCaps="true"
             android:textColor="@android:color/black"/>
 
-</androidx.cardview.widget.CardView>
+    <View android:id="@+id/divider"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginStart="72dp"
+            android:background="@color/divider"/>
+
+</LinearLayout>
