--- a/app/src/main/res/layout/recycler_view_item_promissoria_alt.xml
+++ b/app/src/main/res/layout/recycler_view_item_promissoria_alt.xml
@@ -3,36 +3,28 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:paddingStart="72dp"
         android:paddingTop="24dp"
         android:paddingEnd="8dp">
 
-    <LinearLayout
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-        <ImageView
-                android:id="@+id/imageViewIcon"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:layout_marginEnd="12dp"
-                android:layout_marginStart="12dp"
-                android:layout_gravity="center"
-                android:scaleType="center"
-                android:src="@drawable/plus_green_24dp" />
+            android:orientation="horizontal"
+            android:paddingEnd="8dp">
 
         <TextView
-                android:id="@+id/textViewData"
+                android:id="@+id/textViewVencimento"
                 android:layout_width="0dp"
                 android:layout_height="50dp"
                 android:layout_weight="3"
-                android:maxLines="3"
+                android:maxLines="4"
                 android:text="10\nJUL\n2020"
                 android:textSize="14sp"
                 android:textStyle="bold" />
 
         <TextView
-                android:id="@+id/textViewRef"
+                android:id="@+id/textViewObservacao"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="4"
@@ -50,37 +42,37 @@
 
             <TextView
                     android:id="@+id/textViewValor"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="4"
                     android:maxLines="2"
                     android:text="R$ 50,55"
                     android:textAllCaps="true"
-                    android:gravity="end"
                     android:textColor="@android:color/black"
                     android:textSize="20sp"
                     android:textStyle="bold" />
 
             <TextView
-                    android:id="@+id/textViewTipo"
-                    android:layout_width="match_parent"
+                    android:id="@+id/textViewStatus"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="2"
                     android:gravity="end"
                     android:maxLines="2"
-                    android:text="RECEITA"
+                    android:text="PENDENTE"
                     android:textAllCaps="true"
-                    android:textSize="12sp" />
+                    android:textColor="@android:color/holo_red_dark"
+                    android:textSize="12sp"
+                    android:textStyle="bold" />
 
         </LinearLayout>
-
     </LinearLayout>
 
-    <View android:id="@+id/divider"
+    <View
+            android:id="@+id/divider"
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginTop="24dp"
-            android:layout_marginStart="72dp"
-            android:background="@color/divider"/>
+            android:background="@color/divider" />
 
 </LinearLayout>
