--- a/app/src/main/res/menu/menu_search.xml
+++ b/app/src/main/res/menu/menu_search.xml
@@ -5,7 +5,12 @@
     <item android:id="@+id/searchView"
             android:title="Search"
             android:icon="@drawable/search"
-            app:showAsAction="always"
+            app:showAsAction="ifRoom"
             app:actionViewClass="android.widget.SearchView" />
+
+    <item android:id="@+id/report"
+            android:title="Exportar"
+            android:icon="@drawable/file_export_outline"
+            app:showAsAction="ifRoom"/>
 
 </menu>
