--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="accent_active">#5efc82</color>
-    <color name="icons">#FFFFFF</color>
+    <color name="icons">@color/cinza_padrao_android</color>
     <color name="divider">#BDBDBD</color>
     <color name="bg_black_transparencia">#9AF1F1F1</color>
     <color name="color_success">#01BD13</color>
