--- a/app/src/main/res/menu/main_report.xml
+++ b/app/src/main/res/menu/main_report.xml
@@ -6,5 +6,5 @@
           android:title="Exportar"
           android:orderInCategory="100"
             android:icon="@drawable/file_export_outline"
-          app:showAsAction="always"/>
+          app:showAsAction="ifRoom"/>
 </menu>
