--- a/app/src/main/res/menu/menu_registrar_debito.xml
+++ b/app/src/main/res/menu/menu_registrar_debito.xml
@@ -7,14 +7,14 @@
             android:icon="@drawable/basket_off"
             android:orderInCategory="100"
             android:title="Cesta"
-            app:showAsAction="always" />
+            app:showAsAction="ifRoom" />
 
     <item
             android:id="@+id/action_ref"
             android:icon="@drawable/account_question"
             android:orderInCategory="100"
             android:title="Ref"
-            app:showAsAction="always" />
+            app:showAsAction="ifRoom" />
 
 
 </menu>
